# rust-speedb

./: .gitmodules  Cargo.toml  README.md
libspeedb-sys/: Cargo.toml  Makefile  README.md  build.rs  build_version.cc  rocksdb_lib_sources.txt  snappy-stubs-public.h
libspeedb-sys/tests/: .cargo_vcs_info.json
src/: db.rs  db_options.rs  lib.rs
