[package]
name = "speedb"
description = "Rust wrapper for Facebook's RocksDB embeddable datsabase"
version = "0.0.2"
edition = "2018"
rust-version = "1.60"
authors = ["Tyler Neely <t@jujit.su>", "David Greenberg <dsg123456789@gmail.com>"]
repository = "https://github.com/rust-rocksdb/rust-rocksdb"
license = "Apache-2.0"
categories = [ "database" ]
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/rust-rocksdb/rust-rocksdb"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[workspace]
members = ["libspeedb-sys"]

[features]
default = ["snappy", "lz4", "zstd", "zlib", "bzip2"]
jemalloc = ["libspeedb-sys/jemalloc"]
io-uring = ["libspeedb-sys/io-uring"]
valgrind = []
snappy = ["libspeedb-sys/snappy"]
lz4 = ["libspeedb-sys/lz4"]
zstd = ["libspeedb-sys/zstd"]
zlib = ["libspeedb-sys/zlib"]
bzip2 = ["libspeedb-sys/bzip2"]
rtti = ["libspeedb-sys/rtti"]
multi-threaded-cf = []
serde1 = ["serde"]

[dependencies]
libc = "0.2"
libspeedb-sys = { path = "libspeedb-sys", version = "0.0.2" }
serde = { version = "1", features = [ "derive" ], optional = true }

[dev-dependencies]
trybuild = "1.0"
tempfile = "3.1"
pretty_assertions = "1.0"
bincode = "1.3"
serde = { version = "1", features = [ "derive" ] }
